--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "NodeChatSystem",
   "version": "0.0.1",
-  "description": "Realtime chat system for Tutorialzine.com",
+  "description": "Realtime chat system ",
+  "repository" :
+  { "type" : "git"
+  , "url" : "https://github.com/technagendra/heychat"
+  },
 "scripts": {
   "start": "node server.js"
 },
